@@ -667,20 +667,8 @@ void CGUIWindowVideoFiles::OnRetrieveVideoInfo(CFileItemList& items)
           // try looking for .nfo file based off the stacked title
           if (pItem->IsStack() && strNfoFile.IsEmpty())
           {
-            /*
-            problem!!!
-            Stacked items appear as:
-            "stack://smb://workgroup;user:pass@server/somepath/to/STACKEDFILE.AVI"
-            A matching nfo file cant be found since its looking for:
-            "stack://smb://workgroup;user:pass@server/somepath/to/STACKEDFILE.NFO"
-            I *think* GetStackedTitlePath() should return without stack:// prefix
-            but I fixed it here because I wasnt sure.
-            */
-
             CStackDirectory dir;
             CStdString stackedTitlePath = dir.GetStackedTitlePath(pItem->m_strPath);
-            if (stackedTitlePath.Left(8).Equals("stack://"))
-              stackedTitlePath = stackedTitlePath.Mid(8);
             CUtil::ReplaceExtension(stackedTitlePath, ".nfo", strNfoFile);
             CLog::Log(LOGDEBUG,"File = [%s]",stackedTitlePath.c_str());
             CLog::Log(LOGDEBUG," NFO = [%s]",strNfoFile.c_str());
